--- a/Weekly Project 16/Weekly Project - 16.ipynb
+++ b/Weekly Project 16/Weekly Project - 16.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "823d820a",
    "metadata": {},
    "outputs": [],
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "2974ad21",
    "metadata": {},
    "outputs": [
@@ -77,6 +77,10 @@
        "      <th>vaccines</th>\n",
        "      <th>source_name</th>\n",
        "      <th>source_website</th>\n",
+       "      <th>year</th>\n",
+       "      <th>month</th>\n",
+       "      <th>day</th>\n",
+       "      <th>month_name</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -84,91 +88,111 @@
        "      <th>0</th>\n",
        "      <td>Afghanistan</td>\n",
        "      <td>AFG</td>\n",
-       "      <td>2021-02-22</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>2021-05-27</td>\n",
+       "      <td>593313.0</td>\n",
+       "      <td>479574.0</td>\n",
+       "      <td>113739.0</td>\n",
+       "      <td>2859.0</td>\n",
+       "      <td>6487.0</td>\n",
+       "      <td>1.49</td>\n",
+       "      <td>1.20</td>\n",
+       "      <td>0.29</td>\n",
+       "      <td>163.0</td>\n",
        "      <td>Johnson&amp;Johnson, Oxford/AstraZeneca, Pfizer/Bi...</td>\n",
        "      <td>World Health Organization</td>\n",
        "      <td>https://covid19.who.int/</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>5</td>\n",
+       "      <td>27</td>\n",
+       "      <td>May</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>Afghanistan</td>\n",
        "      <td>AFG</td>\n",
-       "      <td>2021-02-23</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1367.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>34.0</td>\n",
+       "      <td>2021-06-03</td>\n",
+       "      <td>630305.0</td>\n",
+       "      <td>481800.0</td>\n",
+       "      <td>148505.0</td>\n",
+       "      <td>4015.0</td>\n",
+       "      <td>5285.0</td>\n",
+       "      <td>1.58</td>\n",
+       "      <td>1.21</td>\n",
+       "      <td>0.37</td>\n",
+       "      <td>133.0</td>\n",
        "      <td>Johnson&amp;Johnson, Oxford/AstraZeneca, Pfizer/Bi...</td>\n",
        "      <td>World Health Organization</td>\n",
        "      <td>https://covid19.who.int/</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>6</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Jun</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>Afghanistan</td>\n",
        "      <td>AFG</td>\n",
-       "      <td>2021-02-24</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1367.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>34.0</td>\n",
+       "      <td>2022-01-27</td>\n",
+       "      <td>5081064.0</td>\n",
+       "      <td>4517380.0</td>\n",
+       "      <td>3868832.0</td>\n",
+       "      <td>6868.0</td>\n",
+       "      <td>9802.0</td>\n",
+       "      <td>12.76</td>\n",
+       "      <td>11.34</td>\n",
+       "      <td>9.71</td>\n",
+       "      <td>246.0</td>\n",
        "      <td>Johnson&amp;Johnson, Oxford/AstraZeneca, Pfizer/Bi...</td>\n",
        "      <td>World Health Organization</td>\n",
        "      <td>https://covid19.who.int/</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>1</td>\n",
+       "      <td>27</td>\n",
+       "      <td>Jan</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>Afghanistan</td>\n",
-       "      <td>AFG</td>\n",
-       "      <td>2021-02-25</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1367.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>34.0</td>\n",
-       "      <td>Johnson&amp;Johnson, Oxford/AstraZeneca, Pfizer/Bi...</td>\n",
-       "      <td>World Health Organization</td>\n",
-       "      <td>https://covid19.who.int/</td>\n",
+       "      <td>Albania</td>\n",
+       "      <td>ALB</td>\n",
+       "      <td>2021-02-18</td>\n",
+       "      <td>3049.0</td>\n",
+       "      <td>2438.0</td>\n",
+       "      <td>611.0</td>\n",
+       "      <td>1348.0</td>\n",
+       "      <td>254.0</td>\n",
+       "      <td>0.11</td>\n",
+       "      <td>0.08</td>\n",
+       "      <td>0.02</td>\n",
+       "      <td>88.0</td>\n",
+       "      <td>Oxford/AstraZeneca, Pfizer/BioNTech, Sinovac, ...</td>\n",
+       "      <td>Ministry of Health</td>\n",
+       "      <td>https://shendetesia.gov.al/vaksinimi-anticovid...</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>2</td>\n",
+       "      <td>18</td>\n",
+       "      <td>Feb</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>Afghanistan</td>\n",
-       "      <td>AFG</td>\n",
-       "      <td>2021-02-26</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1367.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>34.0</td>\n",
-       "      <td>Johnson&amp;Johnson, Oxford/AstraZeneca, Pfizer/Bi...</td>\n",
-       "      <td>World Health Organization</td>\n",
-       "      <td>https://covid19.who.int/</td>\n",
+       "      <td>Albania</td>\n",
+       "      <td>ALB</td>\n",
+       "      <td>2021-05-11</td>\n",
+       "      <td>622507.0</td>\n",
+       "      <td>440921.0</td>\n",
+       "      <td>181586.0</td>\n",
+       "      <td>9548.0</td>\n",
+       "      <td>12160.0</td>\n",
+       "      <td>21.67</td>\n",
+       "      <td>15.35</td>\n",
+       "      <td>6.32</td>\n",
+       "      <td>4233.0</td>\n",
+       "      <td>Oxford/AstraZeneca, Pfizer/BioNTech, Sinovac, ...</td>\n",
+       "      <td>Ministry of Health</td>\n",
+       "      <td>https://shendetesia.gov.al/vaksinimi-anticovid...</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>5</td>\n",
+       "      <td>11</td>\n",
+       "      <td>May</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -176,55 +200,69 @@
       ],
       "text/plain": [
        "       country iso_code        date  total_vaccinations  people_vaccinated  \\\n",
-       "0  Afghanistan      AFG  2021-02-22                 0.0                0.0   \n",
-       "1  Afghanistan      AFG  2021-02-23                 NaN                NaN   \n",
-       "2  Afghanistan      AFG  2021-02-24                 NaN                NaN   \n",
-       "3  Afghanistan      AFG  2021-02-25                 NaN                NaN   \n",
-       "4  Afghanistan      AFG  2021-02-26                 NaN                NaN   \n",
+       "0  Afghanistan      AFG  2021-05-27            593313.0           479574.0   \n",
+       "1  Afghanistan      AFG  2021-06-03            630305.0           481800.0   \n",
+       "2  Afghanistan      AFG  2022-01-27           5081064.0          4517380.0   \n",
+       "3      Albania      ALB  2021-02-18              3049.0             2438.0   \n",
+       "4      Albania      ALB  2021-05-11            622507.0           440921.0   \n",
        "\n",
        "   people_fully_vaccinated  daily_vaccinations_raw  daily_vaccinations  \\\n",
-       "0                      NaN                     NaN                 NaN   \n",
-       "1                      NaN                     NaN              1367.0   \n",
-       "2                      NaN                     NaN              1367.0   \n",
-       "3                      NaN                     NaN              1367.0   \n",
-       "4                      NaN                     NaN              1367.0   \n",
+       "0                 113739.0                  2859.0              6487.0   \n",
+       "1                 148505.0                  4015.0              5285.0   \n",
+       "2                3868832.0                  6868.0              9802.0   \n",
+       "3                    611.0                  1348.0               254.0   \n",
+       "4                 181586.0                  9548.0             12160.0   \n",
        "\n",
        "   total_vaccinations_per_hundred  people_vaccinated_per_hundred  \\\n",
-       "0                             0.0                            0.0   \n",
-       "1                             NaN                            NaN   \n",
-       "2                             NaN                            NaN   \n",
-       "3                             NaN                            NaN   \n",
-       "4                             NaN                            NaN   \n",
+       "0                            1.49                           1.20   \n",
+       "1                            1.58                           1.21   \n",
+       "2                           12.76                          11.34   \n",
+       "3                            0.11                           0.08   \n",
+       "4                           21.67                          15.35   \n",
        "\n",
        "   people_fully_vaccinated_per_hundred  daily_vaccinations_per_million  \\\n",
-       "0                                  NaN                             NaN   \n",
-       "1                                  NaN                            34.0   \n",
-       "2                                  NaN                            34.0   \n",
-       "3                                  NaN                            34.0   \n",
-       "4                                  NaN                            34.0   \n",
+       "0                                 0.29                           163.0   \n",
+       "1                                 0.37                           133.0   \n",
+       "2                                 9.71                           246.0   \n",
+       "3                                 0.02                            88.0   \n",
+       "4                                 6.32                          4233.0   \n",
        "\n",
        "                                            vaccines  \\\n",
        "0  Johnson&Johnson, Oxford/AstraZeneca, Pfizer/Bi...   \n",
        "1  Johnson&Johnson, Oxford/AstraZeneca, Pfizer/Bi...   \n",
        "2  Johnson&Johnson, Oxford/AstraZeneca, Pfizer/Bi...   \n",
-       "3  Johnson&Johnson, Oxford/AstraZeneca, Pfizer/Bi...   \n",
-       "4  Johnson&Johnson, Oxford/AstraZeneca, Pfizer/Bi...   \n",
+       "3  Oxford/AstraZeneca, Pfizer/BioNTech, Sinovac, ...   \n",
+       "4  Oxford/AstraZeneca, Pfizer/BioNTech, Sinovac, ...   \n",
        "\n",
-       "                 source_name            source_website  \n",
-       "0  World Health Organization  https://covid19.who.int/  \n",
-       "1  World Health Organization  https://covid19.who.int/  \n",
-       "2  World Health Organization  https://covid19.who.int/  \n",
-       "3  World Health Organization  https://covid19.who.int/  \n",
-       "4  World Health Organization  https://covid19.who.int/  "
+       "                 source_name  \\\n",
+       "0  World Health Organization   \n",
+       "1  World Health Organization   \n",
+       "2  World Health Organization   \n",
+       "3         Ministry of Health   \n",
+       "4         Ministry of Health   \n",
+       "\n",
+       "                                      source_website  year  month  day  \\\n",
+       "0                           https://covid19.who.int/  2021      5   27   \n",
+       "1                           https://covid19.who.int/  2021      6    3   \n",
+       "2                           https://covid19.who.int/  2022      1   27   \n",
+       "3  https://shendetesia.gov.al/vaksinimi-anticovid...  2021      2   18   \n",
+       "4  https://shendetesia.gov.al/vaksinimi-anticovid...  2021      5   11   \n",
+       "\n",
+       "  month_name  \n",
+       "0        May  \n",
+       "1        Jun  \n",
+       "2        Jan  \n",
+       "3        Feb  \n",
+       "4        May  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = pd.read_csv('country_vaccinations.csv')\n",
+    "df = pd.read_csv('country_vaccination_preprocessed.csv')\n",
     "df.head()"
    ]
   },
