Updated Major Project 2 and Major Project 3
Mp 2:-

added pay_fine function
updated students data base
added black listed

Mp3:-

modify code and fix bug

--- a/Major Project  2/Major Project - 2.ipynb
+++ b/Major Project  2/Major Project - 2.ipynb
@@ -362,14 +362,14 @@
     "            else:\n",
     "                # if first entry\n",
     "                if status == ():\n",
-    "                    status        = (book, date)\n",
+    "                    status        = (book, date,1)\n",
     "                    \n",
     "                # if not first entry\n",
     "                else:\n",
-    "                    books , dates = status\n",
+    "                    books , dates, count = status\n",
     "                    books        += ', ' + book\n",
     "                    dates        += ', ' + date\n",
-    "                    status        = (books, dates)\n",
+    "                    status        = (books, dates , count +1)\n",
     "                \n",
     "            \n",
     "    \n",
@@ -459,13 +459,14 @@
     "                # update issued list of that stud_id and saving in database\n",
     "                students[stud_id]['issued']  =  issued\n",
     "                write_file(students,'student')\n",
+    "                print('Book return sucessfully')\n",
     "            break\n",
     "  "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "id": "52f86d8d",
    "metadata": {},
    "outputs": [],
@@ -478,7 +479,7 @@
     "    \n",
     "    for stud_id , student in students.items():\n",
     "        \n",
-    "        book_expired = check_status(student['issued'])\n",
+    "        book_expired = check_status(student['issued'],False)\n",
     "        \n",
     "        if book_expired != ():\n",
     "            \n",
@@ -492,12 +493,68 @@
     "            blacklist['expired'        ].append(book_expired[1           ])\n",
     "    \n",
     "    file_name = 'Blacklist Student till ' + dt.now().strftime('%d-%m-%y') + '.csv'\n",
-    "    pd.DataFrame(blacklist).to_csv(filename,index = False)"
+    "    pd.DataFrame(blacklist).to_csv(file_name,index = False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 17,
+   "id": "9304569b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def pay_fine():\n",
+    "    \n",
+    "    stud_id = None\n",
+    "    \n",
+    "    students      = read_file('student')\n",
+    "     # While Loop until inputs are valid\n",
+    "    while True:\n",
+    "        \n",
+    "        #\n",
+    "        try:\n",
+    "            stud_id = input('Scan / Type student id: ').upper()\n",
+    "\n",
+    "            if not stud_id in students :\n",
+    "\n",
+    "                print('Student id not found')\n",
+    "                continue\n",
+    "\n",
+    "            break\n",
+    "        except:\n",
+    "            print('Try Again ... ') \n",
+    "            \n",
+    "    issued       = students[stud_id]['issued']\n",
+    "    book_expired = check_status(issued,flag = False)\n",
+    "    \n",
+    "    if book_expired != ():\n",
+    "        \n",
+    "        print('You have to pay fine for', book_expired[2], 'books')\n",
+    "        print('Total Fine', 500 * book_expired[2])\n",
+    "        \n",
+    "        paid = input(\"Do you want to pay Type 'paid' for done payment \").lower()\n",
+    "        \n",
+    "        if paid == 'paid':\n",
+    "            \n",
+    "            for book_id , expired in issued:\n",
+    "                \n",
+    "                if book_id in  book_expired[0]:\n",
+    "                    \n",
+    "                    issued.remove((book_id , expired))\n",
+    "            \n",
+    "            students[stud_id]['issued'] = issued\n",
+    "            \n",
+    "            write_file(students,'student')\n",
+    "            \n",
+    "            print('Payment done and Penalty removed')\n",
+    "            \n",
+    "    else:\n",
+    "        print('Cleared')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "64a91b0f",
    "metadata": {},
    "outputs": [
@@ -510,18 +567,21 @@
       "2. Book Issue / Reissue\n",
       "3. Book return \n",
       "4. List of Blacklist Student\n",
-      "5. Exit\n",
-      "Enter your choice number: 3\n",
-      "Scan / Type Book id: VLB1234\n",
-      "Scan / Type student id: VU1F1819023\n",
+      "5. Pay fine\n",
+      "6. Exit\n",
+      "Enter your choice number: 5\n",
+      "Scan / Type student id: VU1F1920037\n",
+      "You have to pay fine for 4 books\n",
+      "Total Fine 2000\n",
+      "Do you want to pay Type 'paid' for done payment exit\n",
       "********************************************************************************\n",
       "Welcome to Library Management\n",
       "1. Book Avail\n",
       "2. Book Issue / Reissue\n",
       "3. Book return \n",
       "4. List of Blacklist Student\n",
-      "5. Exit\n",
-      "Enter your choice number: 5\n"
+      "5. Pay fine\n",
+      "6. Exit\n"
      ]
     }
    ],
@@ -535,13 +595,14 @@
     "        print('2. Book Issue / Reissue')\n",
     "        print('3. Book return ')\n",
     "        print('4. List of Blacklist Student')\n",
-    "        print('5. Exit')\n",
+    "        print('5. Pay fine')\n",
+    "        print('6. Exit')\n",
     "        \n",
-    "        choice = choices(5)\n",
+    "        choice = choices(6)\n",
     "        \n",
     "        if not choice   : continue\n",
     "        \n",
-    "        elif choice == 5: break\n",
+    "        elif choice == 6: break\n",
     "        \n",
     "        elif choice == 1: book_avail()\n",
     "            \n",
@@ -558,31 +619,18 @@
     "                \n",
     "            else             : book_return(book_id ,stud_id, books, students)\n",
     "            \n",
-    "        else            : blacklist()\n",
+    "        elif choice == 4 : blacklist()\n",
+    "        else             : pay_fine()\n",
     "            \n",
-    "        print('*'*80)     "
+    "        print('*'*80) "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "345d3c21",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'name': 'ACHAREKAR OJAS SHIVADATTA MALVIKA',\n",
-       " 'graduation year': 2022,\n",
-       " 'degree': 'BE ( Computer Engineering )',\n",
-       " 'issued': [['VLB0222', '10-02-23'], ['VLB0321', '10-02-23']]}"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "students = read_file('student')\n",
     "students['VU1F1819023']"
@@ -601,25 +649,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "cb889fd0",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'name': 'Yuktahaar: The Belly and Brain Diet',\n",
-       " 'quantity': 1112,\n",
-       " 'genres': 'Health, Fitness & Nutrition',\n",
-       " 'price': 740.0,\n",
-       " 'author': 'Munmun Ganeriwal'}"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "books = read_file()\n",
     "books['VLB1234']"
@@ -627,25 +660,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "941091e3",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'name': 'Yuktahaar: The Belly and Brain Diet',\n",
-       " 'quantity': 1113,\n",
-       " 'genres': 'Health, Fitness & Nutrition',\n",
-       " 'price': 740.0,\n",
-       " 'author': 'Munmun Ganeriwal'}"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "books = read_file()\n",
     "books['VLB1234']"
