--- a/Weekly Project 21/Weekly Project 21 - Lokesh Parab.ipynb
+++ b/Weekly Project 21/Weekly Project 21 - Lokesh Parab.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "451499a6",
+   "id": "25ac0271",
    "metadata": {},
    "source": [
     "# Import Library"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "74303ccd",
+   "id": "89f064ea",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1bed74e3",
+   "id": "999f0893",
    "metadata": {},
    "source": [
     "# Function"
@@ -35,7 +35,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "d6ff93ab",
+   "id": "cfcd1019",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "917fefa3",
+   "id": "2119f833",
    "metadata": {},
    "source": [
     "# Webscraping Top 250 IMDb Shows"
@@ -57,15 +57,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "7542f0fb",
+   "execution_count": 3,
+   "id": "4a4c2d56",
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|████████████████████████████████████████████████████████████████████████████████████| 5/5 [00:16<00:00,  3.25s/it]\n"
+      "100%|████████████████████████████████████████████████████████████████████████████████████| 5/5 [00:14<00:00,  2.81s/it]\n"
      ]
     }
    ],
@@ -125,8 +125,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "ef44f3b6",
+   "execution_count": 4,
+   "id": "07d233c9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,8 +135,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "6c5c0765",
+   "execution_count": 5,
+   "id": "3a5f1b55",
    "metadata": {},
    "outputs": [
     {
@@ -240,7 +240,7 @@
        "4            \\nDrama, Western                  8.7  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -251,8 +251,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "f53352d5",
+   "execution_count": 6,
+   "id": "1a6d2b43",
    "metadata": {},
    "outputs": [
     {
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6c156ae6",
+   "id": "a2f5350d",
    "metadata": {},
    "source": [
     "# Data Preprocesing"
@@ -290,8 +290,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "67df9475",
+   "execution_count": 7,
+   "id": "a1e2f186",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -303,8 +303,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "e6cd8425",
+   "execution_count": 8,
+   "id": "1a569b0b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -318,8 +318,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "5c7084d6",
+   "execution_count": 9,
+   "id": "da3d7cbd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -330,8 +330,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "81f7da5b",
+   "execution_count": 10,
+   "id": "a2d4e648",
    "metadata": {},
    "outputs": [
     {
@@ -435,7 +435,7 @@
        "4            Drama, Western      8.7  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -445,9 +445,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "9b499365",
+   "metadata": {},
+   "source": [
+    "# Saving Dataframe in .csv"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "c2ccf56c",
+   "execution_count": 11,
+   "id": "e0abc8d1",
    "metadata": {},
    "outputs": [],
    "source": [
