Added Project 23 and Completed Weekly Project 18

--- a/Weekly Project 17/Weekly Project - 17.ipynb
+++ b/Weekly Project 17/Weekly Project - 17.ipynb
@@ -199,6 +199,273 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "cf598de2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['236670' '236671' '236672' ... '162006' '162007' '162008']\n",
+      "--------------------------------------------------------------------------------\n",
+      "['Wired Headphones' 'Bose SoundSport Headphones' 'iPhone'\n",
+      " 'AA Batteries (4-pack)' '34in Ultrawide Monitor' '20in Monitor'\n",
+      " 'Macbook Pro Laptop' 'LG Washing Machine' '27in FHD Monitor'\n",
+      " 'Lightning Charging Cable' 'Apple Airpods Headphones'\n",
+      " 'AAA Batteries (4-pack)' 'USB-C Charging Cable' '27in 4K Gaming Monitor'\n",
+      " 'ThinkPad Laptop' 'Flatscreen TV' 'Google Phone' 'Vareebadd Phone'\n",
+      " 'Product' 'LG Dryer']\n",
+      "--------------------------------------------------------------------------------\n",
+      "['2' '1' '3' '4' 'Quantity Ordered' '6' '7' '5' '8' '9']\n",
+      "--------------------------------------------------------------------------------\n",
+      "['11.99' '99.99' '700.0' '3.84' '379.99' '109.99' '1700.0' '600.0'\n",
+      " '149.99' '14.95' '150.0' '2.99' '11.95' '389.99' '999.99' '300.0' '400.0'\n",
+      " 'Price Each' '600' '150' '1700' '300' '400' '700']\n",
+      "--------------------------------------------------------------------------------\n",
+      "['08/31/19 22:21' '08/15/19 15:11' '08/06/19 14:40' ... '02/04/19 20:44'\n",
+      " '02/24/19 06:31' '02/24/19 19:09']\n",
+      "--------------------------------------------------------------------------------\n",
+      "['359 Spruce St, Seattle, WA 98101' '492 Ridge St, Dallas, TX 75001'\n",
+      " '149 7th St, Portland, OR 97035' ...\n",
+      " '380 Ridge St, San Francisco, CA 94016'\n",
+      " '417 Jefferson St, Los Angeles, CA 90001' '498 8th St, Atlanta, GA 30301']\n",
+      "--------------------------------------------------------------------------------\n",
+      "['August' 'March' 'July' 'June' 'October' 'April' 'December' 'September'\n",
+      " 'May' 'January' 'November' 'February']\n",
+      "--------------------------------------------------------------------------------\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in df:\n",
+    "    print(df[i].unique())\n",
+    "    print('-'*80)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "c1311e31",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>order_id</th>\n",
+       "      <th>product</th>\n",
+       "      <th>quantity</th>\n",
+       "      <th>price</th>\n",
+       "      <th>date</th>\n",
+       "      <th>address</th>\n",
+       "      <th>month</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>211</th>\n",
+       "      <td>Order ID</td>\n",
+       "      <td>Product</td>\n",
+       "      <td>Quantity Ordered</td>\n",
+       "      <td>Price Each</td>\n",
+       "      <td>Order Date</td>\n",
+       "      <td>Purchase Address</td>\n",
+       "      <td>August</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>243</th>\n",
+       "      <td>Order ID</td>\n",
+       "      <td>Product</td>\n",
+       "      <td>Quantity Ordered</td>\n",
+       "      <td>Price Each</td>\n",
+       "      <td>Order Date</td>\n",
+       "      <td>Purchase Address</td>\n",
+       "      <td>August</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1289</th>\n",
+       "      <td>Order ID</td>\n",
+       "      <td>Product</td>\n",
+       "      <td>Quantity Ordered</td>\n",
+       "      <td>Price Each</td>\n",
+       "      <td>Order Date</td>\n",
+       "      <td>Purchase Address</td>\n",
+       "      <td>August</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1410</th>\n",
+       "      <td>Order ID</td>\n",
+       "      <td>Product</td>\n",
+       "      <td>Quantity Ordered</td>\n",
+       "      <td>Price Each</td>\n",
+       "      <td>Order Date</td>\n",
+       "      <td>Purchase Address</td>\n",
+       "      <td>August</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1425</th>\n",
+       "      <td>Order ID</td>\n",
+       "      <td>Product</td>\n",
+       "      <td>Quantity Ordered</td>\n",
+       "      <td>Price Each</td>\n",
+       "      <td>Order Date</td>\n",
+       "      <td>Purchase Address</td>\n",
+       "      <td>August</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>179599</th>\n",
+       "      <td>Order ID</td>\n",
+       "      <td>Product</td>\n",
+       "      <td>Quantity Ordered</td>\n",
+       "      <td>Price Each</td>\n",
+       "      <td>Order Date</td>\n",
+       "      <td>Purchase Address</td>\n",
+       "      <td>February</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>180380</th>\n",
+       "      <td>Order ID</td>\n",
+       "      <td>Product</td>\n",
+       "      <td>Quantity Ordered</td>\n",
+       "      <td>Price Each</td>\n",
+       "      <td>Order Date</td>\n",
+       "      <td>Purchase Address</td>\n",
+       "      <td>February</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>181235</th>\n",
+       "      <td>Order ID</td>\n",
+       "      <td>Product</td>\n",
+       "      <td>Quantity Ordered</td>\n",
+       "      <td>Price Each</td>\n",
+       "      <td>Order Date</td>\n",
+       "      <td>Purchase Address</td>\n",
+       "      <td>February</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>181579</th>\n",
+       "      <td>Order ID</td>\n",
+       "      <td>Product</td>\n",
+       "      <td>Quantity Ordered</td>\n",
+       "      <td>Price Each</td>\n",
+       "      <td>Order Date</td>\n",
+       "      <td>Purchase Address</td>\n",
+       "      <td>February</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>185798</th>\n",
+       "      <td>Order ID</td>\n",
+       "      <td>Product</td>\n",
+       "      <td>Quantity Ordered</td>\n",
+       "      <td>Price Each</td>\n",
+       "      <td>Order Date</td>\n",
+       "      <td>Purchase Address</td>\n",
+       "      <td>February</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>355 rows × 7 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        order_id  product          quantity       price        date  \\\n",
+       "211     Order ID  Product  Quantity Ordered  Price Each  Order Date   \n",
+       "243     Order ID  Product  Quantity Ordered  Price Each  Order Date   \n",
+       "1289    Order ID  Product  Quantity Ordered  Price Each  Order Date   \n",
+       "1410    Order ID  Product  Quantity Ordered  Price Each  Order Date   \n",
+       "1425    Order ID  Product  Quantity Ordered  Price Each  Order Date   \n",
+       "...          ...      ...               ...         ...         ...   \n",
+       "179599  Order ID  Product  Quantity Ordered  Price Each  Order Date   \n",
+       "180380  Order ID  Product  Quantity Ordered  Price Each  Order Date   \n",
+       "181235  Order ID  Product  Quantity Ordered  Price Each  Order Date   \n",
+       "181579  Order ID  Product  Quantity Ordered  Price Each  Order Date   \n",
+       "185798  Order ID  Product  Quantity Ordered  Price Each  Order Date   \n",
+       "\n",
+       "                 address     month  \n",
+       "211     Purchase Address    August  \n",
+       "243     Purchase Address    August  \n",
+       "1289    Purchase Address    August  \n",
+       "1410    Purchase Address    August  \n",
+       "1425    Purchase Address    August  \n",
+       "...                  ...       ...  \n",
+       "179599  Purchase Address  February  \n",
+       "180380  Purchase Address  February  \n",
+       "181235  Purchase Address  February  \n",
+       "181579  Purchase Address  February  \n",
+       "185798  Purchase Address  February  \n",
+       "\n",
+       "[355 rows x 7 columns]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[df['quantity'] == 'Quantity Ordered']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "b53f6cb1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['11.99', '99.99', '700.0', '3.84', '379.99', '109.99', '1700.0',\n",
+       "       '600.0', '149.99', '14.95', '150.0', '2.99', '11.95', '389.99',\n",
+       "       '999.99', '300.0', '400.0', '0', '600', '150', '1700', '300',\n",
+       "       '400', '700'], dtype=object)"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# for i in range(len(df['price'])):\n",
+    "#     if \"Pri\" in df['price'][i]:\n",
+    "#         df['price'][i] = df['price'][i].replace(df['price'][i],'0')\n",
+    "#         #df['price'][i] = 0\n",
+    "#         #break\n",
+    "\n",
+    "# df['price'].unique()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "3fe29ed2",
    "metadata": {},
