--- a/Weekly Project 26/Weekly Project 26 Lokesh.ipynb
+++ b/Weekly Project 26/Weekly Project 26 Lokesh.ipynb
@@ -18,7 +18,7 @@
     "import numpy as np\n",
     "import seaborn as sns\n",
     "\n",
-    "from matplotlib import pyplot as plt\n"
+    "from matplotlib import pyplot as plt"
    ]
   },
   {
